--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </ul>
         </nav>
         <div class="header__logo">
-          <img class="header__logo-image" src="images/logo-black.svg">
+          <a href="#0"><img class="header__logo-image" src="images/logo-black.svg" alt="Логотип аукциона Оно тебе надо"></a>
         </div>
         <div class="header__address">
           <a href="tel:+70000000">+9 999 555-5555</a><br>
@@ -75,7 +75,7 @@
       </section>
       <section class="about">
           <div class="about__logo">
-           <img src="images/logo-white.svg" class="about__logo-image">
+           <img src="images/logo-white.svg" alt="Логотип аукциона Оно тебе надо" class="about__logo-image">
           </div>
           <h2 class="about__title">Об аукционе</h2>
           <p class="about__text-p1">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
@@ -97,9 +97,9 @@
         </ul>
       </nav>
       <ul class="footer__social-list-item">
-        <li class="footer__social-list-item"><a href="#0" class="footer__social-link"><img src="images/yt.svg" class="footer__social-icon"></a></li>
-        <li class="footer__social-list-item"><a href="#0" class="footer__social-link"><img src="images/vk.svg" class="footer__social-icon"></a></li>
-        <li class="footer__social-list-item"><a href="#0" class="footer__social-link"><img src="images/pinterest.svg" class="footer__social-icon"></a></li>
+        <li class="footer__social-list-item"><a href="#0" class="footer__social-link"><img src="images/yt.svg" alt="Значок YouTube" class="footer__social-icon"></a></li>
+        <li class="footer__social-list-item"><a href="#0" class="footer__social-link"><img src="images/vk.svg" alt="Значок VK" class="footer__social-icon"></a></li>
+        <li class="footer__social-list-item"><a href="#0" class="footer__social-link"><img src="images/pinterest.svg" alt="Значок Pinterest" class="footer__social-icon"></a></li>
       </ul>
     </footer>
   </body>
