--- a/index.html
+++ b/index.html
@@ -13,31 +13,29 @@
     <header class="header">
         <nav class="header__menu"> 
           <ul class="header__links-list">
-            <li class="header__links-list-item_no-bullet"><p>главная</p></li>
+            <li class="header__links-list-item_no-bullet"><a class="main-no-underline" href="#0">главная</a></li>
             <li class="header__links-list-item"><a href="#0">посмотреть лоты</a></li>
             <li class="header__links-list-item"><a href="#0">об аукционе</a></li>
           </ul>
         </nav>
-        <div class="header__logo">
-          <a href="#0"><img class="header__logo-image" src="images/logo-black.svg" alt="Логотип аукциона Оно тебе надо"></a>
-        </div>
-        <div class="header__address">
+        <a class="header__logo" href="#0"><img class="header__logo-image" src="images/logo-black.svg" alt="Логотип аукциона Оно тебе надо"></a>
+        <address class="address">
           <a href="tel:+70000000">+9 999 555-5555</a><br>
           <a href="mailto:mail@example.com">info@sobaka.ge</a>
-          <address class="address">наб. Принсенграхт 263-<br>265, Амстердам</address>
-        </div>
+          <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
+        </address>
     </header>
     <main>
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
           <span class="aligned-text">О<span class="letter-spacing-extended">н</span>о</span>
-          <span class="aligned-text_center">те<span class="letter-spacing-extended">б</span>е</span>
+          <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
           <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
         </h1>
         <div class="cover__description">
           <h2 class="cover__description-text">Аукцион вещей, в которые никто не верил</h2>
-          <button class="bet-button">Сделать ставку</button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
@@ -74,32 +72,36 @@
         <a href="#0" class="lots__look-more-link">посмотреть больше</a>
       </section>
       <section class="about">
+        <div class="about__column">
           <div class="about__logo">
-           <img src="images/logo-white.svg" alt="Логотип аукциона Оно тебе надо" class="about__logo-image">
+            <img src="images/logo-white.svg" alt="Логотип аукциона Оно тебе надо" class="about__logo-image">
           </div>
+        </div>
           <h2 class="about__title">Об аукционе</h2>
-          <p class="about__text-p1">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-          <p class="about__text-p2">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-          на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+          <div class="about__text-main">
+            <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+            <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+          </div>
         </section>
     </main>
     <footer class="footer">
-      <div class="header__address">
+      <address class="address">
         <a href="tel:+70000000">+9 999 555-5555</a><br>
         <a href="mailto:mail@example.com">info@sobaka.ge</a>
-        <address class="address">наб. Принсенграхт 263-<br>265, Амстердам</address>
-      </div>
+        <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
+      </address>
       <nav class="footer__menu"> 
         <ul class="footer__menu-list">
-          <li class="footer__menu-list-item"><p>главная</p></li>
+          <li class="footer__menu-list-item"><a class="main-no-underline" href="#0">главная</a></li>
           <li class="footer__menu-list-item"><a href="#0">посмотреть лоты</a></li>
           <li class="footer__menu-list-item"><a href="#0">об аукционе</a></li>
         </ul>
       </nav>
       <ul class="footer__social-list-item">
-        <li class="footer__social-list-item"><a href="#0" class="footer__social-link"><img src="images/yt.svg" alt="Значок YouTube" class="footer__social-icon"></a></li>
-        <li class="footer__social-list-item"><a href="#0" class="footer__social-link"><img src="images/vk.svg" alt="Значок VK" class="footer__social-icon"></a></li>
-        <li class="footer__social-list-item"><a href="#0" class="footer__social-link"><img src="images/pinterest.svg" alt="Значок Pinterest" class="footer__social-icon"></a></li>
+        <li class="footer__social-list-item"><a href="#0" class="footer__social-link" target="_blank"><img src="images/yt.svg" alt="Значок YouTube" class="footer__social-icon"></a></li>
+        <li class="footer__social-list-item"><a href="#0" class="footer__social-link" target="_blank"><img src="images/vk.svg" alt="Значок VK" class="footer__social-icon"></a></li>
+        <li class="footer__social-list-item"><a href="#0" class="footer__social-link" target="_blank"><img src="images/pinterest.svg" alt="Значок Pinterest" class="footer__social-icon"></a></li>
       </ul>
     </footer>
   </body>
